apps/codesearch/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: codesearch
  namespace: codesearch
  labels:
    app: codesearch
spec:
  replicas: 2
  selector:
    matchLabels:
      app: codesearch
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: codesearch
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - name: codesearch
          image: k8scode/hound:v0.1.0
          ports:
            - containerPort: 8080
              protocol: TCP
          volumeMounts:
          - name: config
            mountPath: /data
          # resources:
          #   limits:
          #     cpu: "1" # TODO - find baseline
          #     memory: 8Gi # TODO - find baseline
      volumes:
      - name: config
        emptyDir: {}
